--- a/sample/Sample.Web/appsettings.json
+++ b/sample/Sample.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=MrQ\\sql2008;Database=FSP;User ID=sa;Password=sa123456;"
+    "Default": "Server=localhost;Database=FSP;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
